...
                                <rect key="frame" x="117" y="618" width="180" height="34"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="edit"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="b3u-hF-r5X"/>
...
                                <rect key="frame" x="117" y="667" width="180" height="34"/>
                                <color key="backgroundColor" red="0.99215686274509807" green="0.36862745098039218" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Delete habit"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="2MY-fi-xwN"/>
...
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="TgL-d5-wKd">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="u1b-N8-ptm">
                            <connections>
                                <action selector="doneClicked:" destination="8DJ-6u-loa" id="7EF-uk-SCa"/>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar" catalog="system" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="calendar" destination="COX-EP-Rbh" id="1aG-Ue-a0l"/>
...
                        <viewLayoutGuide key="safeArea" id="rvW-wb-v6P"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="U05-QJ-IYY"/>
                    <connections>
                        <outlet property="tableView" destination="e2J-1b-jre" id="oTL-7Q-nFn"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="214" height="36"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
