...
            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Habit Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a9Z-gZ-ZfP">
                        <rect key="frame" x="16" y="0.0" width="288" height="80"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="80" id="GPo-54-oI7"/>
                        </constraints>
                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                        <textInputTraits key="textInputTraits"/>
...
